{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 24,
  "lineage": "15bd8769-4afa-1c05-98eb-614e18c04d6c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4d2b6dc7519d7ee",
            "arn": "arn:aws:ec2:us-east-1:031857855861:elastic-ip/eipalloc-0a4d2b6dc7519d7ee",
            "domain": "vpc",
            "id": "eipalloc-0a4d2b6dc7519d7ee",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-207-29-106.compute-1.amazonaws.com",
            "public_ip": "18.207.29.106",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-eip-for-nat"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-eip-for-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bdd88bd06d16ba03",
            "arn": "arn:aws:ec2:us-east-1:031857855861:instance/i-0ce048fb3cbff525b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce048fb3cbff525b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04897270128554de9"
              }
            ],
            "primary_network_interface_id": "eni-04897270128554de9",
            "private_dns": "ip-10-10-1-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.148",
            "public_dns": "ec2-34-228-254-107.compute-1.amazonaws.com",
            "public_ip": "34.228.254.107",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "ManagedBy": "Terraform"
                },
                "tags_all": {
                  "ManagedBy": "Terraform"
                },
                "throughput": 125,
                "volume_id": "vol-0a04dbd344e1bcaa7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0df9dd0b8563fcc73"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041ba6f5d68bf0e86",
            "tags": {
              "Name": "terraform-ec2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df9dd0b8563fcc73"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "i-0ce048fb3cbff525b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:internet-gateway/igw-0b23ebae3ff093aaf",
            "id": "igw-0b23ebae3ff093aaf",
            "owner_id": "031857855861",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-internet_gateway"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-internet_gateway"
            },
            "vpc_id": "vpc-0dd6731324fc4fdef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4d2b6dc7519d7ee",
            "association_id": "eipassoc-0f471358b79c3226c",
            "connectivity_type": "public",
            "id": "nat-02d749f5b0e48c232",
            "network_interface_id": "eni-066a4c2eb7a717751",
            "private_ip": "10.10.1.121",
            "public_ip": "18.207.29.106",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-041ba6f5d68bf0e86",
            "tags": {
              "Name": "terraform-nat-gw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:route-table/rtb-0933ce79670323251",
            "id": "rtb-0933ce79670323251",
            "owner_id": "031857855861",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02d749f5b0e48c232",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-private-rtb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd6731324fc4fdef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "rtb-0933ce79670323251",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:route-table/rtb-0fdacd34919d9789b",
            "id": "rtb-0fdacd34919d9789b",
            "owner_id": "031857855861",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b23ebae3ff093aaf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public-rtb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd6731324fc4fdef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "rtb-0fdacd34919d9789b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e2ad5686b6a66b2",
            "region": "us-east-1",
            "route_table_id": "rtb-0933ce79670323251",
            "subnet_id": "subnet-09e918954bd48cf17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cac51a075738219",
            "region": "us-east-1",
            "route_table_id": "rtb-0933ce79670323251",
            "subnet_id": "subnet-025ac84dde36650fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006efc3e0fdb5cfd6",
            "region": "us-east-1",
            "route_table_id": "rtb-0933ce79670323251",
            "subnet_id": "subnet-056a3a73b49928084"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_c",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9fd4c6fe5ffd4af",
            "region": "us-east-1",
            "route_table_id": "rtb-0fdacd34919d9789b",
            "subnet_id": "subnet-041ba6f5d68bf0e86"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0963f242574a9308a",
            "region": "us-east-1",
            "route_table_id": "rtb-0fdacd34919d9789b",
            "subnet_id": "subnet-032179d514014436a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d469b1d7884dcb",
            "region": "us-east-1",
            "route_table_id": "rtb-0fdacd34919d9789b",
            "subnet_id": "subnet-08e6792a8f6212b93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:security-group/sg-0df9dd0b8563fcc73",
            "description": "Allow inbound traffic and all outbound traffic to terraform vpc",
            "egress": [],
            "id": "sg-0df9dd0b8563fcc73",
            "ingress": [],
            "name": "terraform-sg",
            "name_prefix": "",
            "owner_id": "031857855861",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd6731324fc4fdef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "sg-0df9dd0b8563fcc73",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-09e918954bd48cf17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e918954bd48cf17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-us-east-1a"
            },
            "vpc_id": "vpc-0dd6731324fc4fdef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-09e918954bd48cf17",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-025ac84dde36650fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025ac84dde36650fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-us-east-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-us-east-1b"
            },
            "vpc_id": "vpc-0dd6731324fc4fdef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-025ac84dde36650fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-056a3a73b49928084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056a3a73b49928084",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-us-east-1c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-us-east-1c"
            },
            "vpc_id": "vpc-0dd6731324fc4fdef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-056a3a73b49928084",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-041ba6f5d68bf0e86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041ba6f5d68bf0e86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-us-east-1a"
            },
            "vpc_id": "vpc-0dd6731324fc4fdef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-041ba6f5d68bf0e86",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-032179d514014436a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032179d514014436a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-us-east-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-us-east-1b"
            },
            "vpc_id": "vpc-0dd6731324fc4fdef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-032179d514014436a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:subnet/subnet-08e6792a8f6212b93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e6792a8f6212b93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031857855861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-us-east-1c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-us-east-1c"
            },
            "vpc_id": "vpc-0dd6731324fc4fdef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "subnet-08e6792a8f6212b93",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:vpc/vpc-0dd6731324fc4fdef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-087b8d8a9febe7833",
            "default_route_table_id": "rtb-0b3ea63189e426cc6",
            "default_security_group_id": "sg-0d997006305813823",
            "dhcp_options_id": "dopt-0c25131b26d1a2e14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd6731324fc4fdef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3ea63189e426cc6",
            "owner_id": "031857855861",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "vpc-0dd6731324fc4fdef",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "terraform-sg_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:security-group-rule/sgr-0648e9437d22ae2f6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0648e9437d22ae2f6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0df9dd0b8563fcc73",
            "security_group_rule_id": "sgr-0648e9437d22ae2f6",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "sgr-0648e9437d22ae2f6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "terraform-sg-http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:security-group-rule/sgr-0fe381abcfabecf48",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-0fe381abcfabecf48",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0df9dd0b8563fcc73",
            "security_group_rule_id": "sgr-0fe381abcfabecf48",
            "tags": {
              "Name": "HTTP"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "HTTP"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "sgr-0fe381abcfabecf48",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "terraform-sg-ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031857855861:security-group-rule/sgr-0da15d92cb686a7de",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH from anywhere",
            "from_port": 22,
            "id": "sgr-0da15d92cb686a7de",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0df9dd0b8563fcc73",
            "security_group_rule_id": "sgr-0da15d92cb686a7de",
            "tags": {
              "Name": "SSH"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "SSH"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "031857855861",
            "id": "sgr-0da15d92cb686a7de",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}